# smart-form-prediction

./: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/: package.json  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/modules/forms/: forms.controller.ts  forms.module.ts  forms.service.ts
backend/src/modules/forms/dto/: form.dto.ts
backend/src/modules/users/: users.controller.ts  users.module.ts  users.service.ts
backend/src/modules/users/dto/: user.dto.ts
docs/: index.md  package.json
docs/.vitepress/: config.ts
frontend/: .eslintrc.js  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: StoreProvider.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Analytics.tsx  FormBuilder.tsx  FormFiller.tsx
frontend/src/services/: api.ts
frontend/src/stores/: AppStore.ts  FormStore.ts  PredictionStore.ts  RootStore.ts  UserStore.ts  types.ts
frontend/src/styles/: App.less  index.less
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  services.yaml  storage.yaml
ml-engine/: Cargo.toml  package.json
ml-engine/src/: lib.rs
requirements/: origin.md  prompt.md  roles-templates.md
