[package]
name = "smart-form-ml"
version = "1.0.0"
edition = "2021"
description = "智能表单预测系统 - WASM机器学习引擎"
authors = ["Smart Form Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Machine Learning dependencies
candle-core = "0.3"
candle-nn = "0.3"
ndarray = "0.15"
nalgebra = "0.32"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "localStorage",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = false
lto = true 